mcp-attr/tests/compile_fail/completion_signature_not_async.stderr
error: completion function must be async
 --> tests/compile_fail/completion_signature_not_async.rs:6:4
  |
6 | fn complete_not_async(_value: &str, _cx: &RequestContext) -> Result<Vec<String>> {
  |    ^^^^^^^^^^^^^^^^^^

warning: unused import: `RequestContext`
 --> tests/compile_fail/completion_signature_not_async.rs:1:48
  |
1 | use mcp_attr::{server::{mcp_server, McpServer, RequestContext, complete_fn}, Result};
  |                                                ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0425]: cannot find function `complete_not_async` in this scope
  --> tests/compile_fail/completion_signature_not_async.rs:13:44
   |
13 |     async fn test_prompt(&self, #[complete(complete_not_async)] msg: String) -> Result<String> {
   |                                            ^^^^^^^^^^^^^^^^^^ not found in this scope
